Opening Map Location

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="lon_default">18.474089</string>
     <string name="temp_pref">Temperature Pref</string>
     <string name="TemperatureDefaultValue">metric</string>
+    <string name="action_map">Map Location</string>
 </resources>
