--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="temp_pref">Temperature Pref</string>
     <string name="TemperatureDefaultValue">metric</string>
     <string name="action_map">Map Location</string>
+    <string name="action_share">Share</string>
 </resources>
